turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:1: error: Unit does not take parameters
override def run() {qmaisons();maison;droite(90);avance(150);droite(90);maison();gauche(90);avance(150);droite(90)
                            ^